--- a/pom.xml
+++ b/pom.xml
@@ -15,5 +15,10 @@
                 <artifactId>bukkit-permissions</artifactId>
                 <version>0.1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+                <groupId>Special</groupId>
+                <artifactId>Special</artifactId>
+                <version>1.0</version>
+        </dependency>
   </dependencies>
 </project>
