--- a/pom.xml
+++ b/pom.xml
@@ -11,14 +11,14 @@
                 <version>0.0.1-SNAPSHOT</version>
         </dependency>
         <dependency>
-                <groupId>org.bukkit</groupId>
-                <artifactId>bukkit-permissions</artifactId>
-                <version>0.1.0-SNAPSHOT</version>
-        </dependency>
-        <dependency>
                 <groupId>Special</groupId>
                 <artifactId>Special</artifactId>
                 <version>1.0</version>
+        </dependency>
+        <dependency>
+                <groupId>ru.tehkode</groupId>
+                <artifactId>PermissionsEx</artifactId>
+                <version>1.14</version>
         </dependency>
         <dependency>
                 <groupId>org.lost-dimension-games</groupId>
