set load:POSTWORLD and softdepend on Permissions to try and fix a bug with bukkit plugin chaining

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,8 +1,9 @@
 name: IRCBridge
 main: org.ldg.minecraft.ircbridge.IRCBridge
 description: Provides an IRC Bridge for Minecraft chat.
+load: POSTWORLD
 depend: [EnhancedPlugin]
-softdepend: [PermissionsBukkit,Special]
+softdepend: [PermissionsBukkit,Special,Permissions]
 version: 1.0
 commands:
   join:
