--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,8 +2,8 @@ name: IRCBridge
 main: org.ldg.minecraft.ircbridge.IRCBridge
 description: Provides an IRC Bridge for Minecraft chat.
 load: POSTWORLD
-depend: [EnhancedPlugin]
-softdepend: [PermissionsBukkit,Special,Permissions]
+depend: [EnhancedPlugin,PermissionsEx]
+softdepend: [Special,Permissions]
 version: 1.0
 commands:
   join:
